Fix alignment of team scores

--- a/src/Teams.module.css
+++ b/src/Teams.module.css
@@ -28,6 +28,9 @@
     border-radius: 10px;
     padding: 5px 0;
     font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .Team>input,
